force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Small_Business_Compact_Layout</compactLayoutAssignment>
    <sharingModel>Private</sharingModel>
</CustomObject>