force-app/main/default/objects/Account/fields/Approved_Funding__c.field-meta.xml
<CustomField>
    <fullName>Approved_Funding__c</fullName>
    <description>Amount of funding approved during the negotiation stage for a funding opportunity.</description>
    <label>Approved Funding</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>