force-app/main/default/objects/Account/fields/Budget_Share__c.field-meta.xml
<CustomField>
    <fullName>Budget_Share__c</fullName>
    <description>The amount of budget responsibility the company will take on.</description>
    <label>Budget Share</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>