force-app/main/default/objects/Account/fields/Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length__c</fullName>
    <description>Contract length, in months, for small business program.</description>
    <inlineHelpText>Number of months the assigned funding will last</inlineHelpText>
    <label>Contract Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>