force-app/main/default/objects/Account/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <description>When the company was enrolled into the program</description>
    <inlineHelpText>When the company got accepted within the program</inlineHelpText>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>