force-app/main/default/objects/Account/fields/Funding_Opportunity_del__c.field-meta.xml
<CustomField>
    <fullName>Funding_Opportunity_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Funding Opportunity assigned to the account.</description>
    <label>Funding Opportunity</label>
    <referenceTo>Funding_Opportunity__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts_del</relationshipName>
    <type>Lookup</type>
</CustomField>