force-app/main/default/objects/Account/fields/Time_In_Program__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Program__c</fullName>
    <description>Days since the company has enrolled in the program</description>
    <formula>TEXT(TODAY() - Enrollment_Date__c) + &quot; Days&quot;</formula>
    <inlineHelpText>Days since the company has enrolled in the program</inlineHelpText>
    <label>Time In Program</label>
    <type>Text</type>
</CustomField>